--- a/app/views/notes/no_notes.html.erb
+++ b/app/views/notes/no_notes.html.erb
@@ -41,9 +41,8 @@
     <div class="error-desc">
         You haven't created any notes... <br>
         Use the link below to start creating a new note. <br/>
-        You can also use the "new note" button in the navigation bar.
         <div><br/>
-            <a href="/notes/new" class="btn btn-primary"><span class="glyphicon glyphicon-home"></span> Create a new Note</a>
+            <a href="/notes/new" class="btn btn-primary"><span></span> Create a new Note</a>
         </div>
     </div>
 </div>
