--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,7 +7,7 @@
   <input class="form-control" type="text" placeholder="When entering a lab name please copy and paste the exact repo name from github.  Example: rails-form_tag-readme. The '-onl01-seng-pt-061520' part is not neccessary." readonly>
   <br>
   <form action="/questions" method="post">
-    <input type="hidden" name="authenticity_token" value="PSQFoBwzsrzv8ZJYtDOE5iPKJJmn3N/4GyOo2lovc9T8l68aPSbABRMoky784CpPA+7nGhBcZj0/oPMWLLwa/Q==">
+    <%= token_tag nil %>
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="exampleFormControlInput1">Lab</label>
