--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -51,10 +51,14 @@
               <form action="/notes/<%= @note.id %>" method="post">
                 <input type="hidden" name="_method" value="PATCH">
                 <input type="text" name="title"  value="<%= @note.title%>">
-                <input type="hidden" name="authenticity_token" value="gHOWhu79yA+zkjkGc9iou/KWwC/jYb4Jr6YM3TBWIbvXZsVKKTyaEBqiygiJapw3c/qdyESkAxsfhKlv2t3dUQ==">
+                <%= token_tag %>
                 <textarea id="newnote" name="content"rows="20" cols="70" palaceholder="Jot it down.."><%= @note.content %></textarea>
                 <input id="new-note-submit" type="submit">
               </form>
+              <form action="/notes/<%= @note.id %>" method="post">
+                  <input type="hidden" name="_method" value="DELETE">
+                  <input type="submit" value="DELETE">
+                </form>
               </div>
             </a>
           </li>
