--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -22,12 +22,63 @@
   float:left;
 }
 #all-notes li h2{
-  color: #6A6A6A;
+  color: white;
 }
 #all-notes h1{
   text-align: center;
 }
+.notes-navbar-container{
+	margin: auto;
+	width: 100px;
+}
+body {
+  background-image: url("https://rb.gy/yvznk8");
+   background-color: #cccccc;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+#all-notes h1{
+	color: white;
+}
+.show-on-hover:hover > ul.dropdown-menu {
+    display: block;
+}
+#nav ul {
+  list-style-type: none;
+	border-radius: 25px;
+  margin: 15px;
+  padding:0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 12.7%;
+}
+
+#nav li {
+  float: left;
+}
+
+#nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#nav li a:hover {
+  background-color: #5555;
+}
 </style>
+<div id="nav">
+    <ul>
+      <li><a href="/notes">All Notes</a></li>
+      <li><a href="/notes/new">New Note</a></li>
+    </ul>
+  </div>
+
 <br>
 <br>
 <div id="center">
