--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -36,7 +36,40 @@
  margin-top: 13px;
  width:100px;
 }
+#nav ul {
+  list-style-type: none;
+	border-radius: 25px;
+  margin: 15px;
+  padding:0;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 12.7%;
+}
+
+#nav li {
+  float: left;
+}
+
+#nav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#nav li a:hover {
+  background-color: #5555;
+}
 </style>
+<div id="nav">
+    <ul>
+      <li><a href="/notes">All Notes</a></li>
+      <li><a href="/notes/new">New Note</a></li>
+    </ul>
+  </div>
 
 <div id="new-note">
         <ul>
