--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -32,11 +32,7 @@
 	width: 100px;
 }
 body {
-  background-image: url("https://rb.gy/yvznk8");
-   background-color: #cccccc;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
+   background-color: #141414;
 }
 #all-notes h1{
 	color: white;
