--- a/app/assets/stylesheets/dashboards.scss
+++ b/app/assets/stylesheets/dashboards.scss
@@ -37,3 +37,120 @@ figcaption {}
     padding: 5px;
     padding-top: 35px;
 }
+#main-container{
+  position: relative;
+/*   width: 1000px;
+  height: 1000px; */
+}
+.item-1{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 224px;
+  left: 520px;
+  z-index: 9;
+}
+.item-2{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 224px;
+  left: 671px;
+  z-index: 9;
+}
+.item-3{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 224px;
+  left: 823px;
+  z-index: 10;
+}
+.item-4{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 224px;
+  left: 970px;
+  z-index: 9;
+}
+.item-5{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 372px;
+  left: 520px;
+  z-index: 9;
+}
+.item-6{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 372px;
+  left: 671px;
+  z-index: 9;
+}
+.item-7{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 372px;
+  left: 823px;
+  z-index: 9;
+}
+.item-8{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 372px;
+  left: 970px;
+  z-index: 9;
+}
+.item-9{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 510px;
+  left: 520px;
+  z-index: 9;
+}
+.item-10{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 510px;
+  left: 671px;
+  z-index: 9;
+}
+.item-11{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 510px;
+  left: 823px;
+  z-index: 9;
+}
+.item-12{
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 510px;
+  left: 970px;
+  z-index: 9;
+}
+.google-search{
+  position: absolute;
+  top: 665px;
+  left: 446px;
+  z-index: 9;
+}
+input[type=text]{
+  border: none;
+  width: 343px;
+  height: 32px;
+  margin-right: 30px;
+  background-color: #aae0de;
+}
+input[type=submit]{
+  visibility: hidden;
+}
