--- a/app/assets/stylesheets/dashboards.scss
+++ b/app/assets/stylesheets/dashboards.scss
@@ -144,13 +144,13 @@ figcaption {}
   left: 446px;
   z-index: 9;
 }
-input[type=text]{
+.google-search input[type=text]{
   border: none;
   width: 343px;
   height: 32px;
   margin-right: 30px;
   background-color: #aae0de;
 }
-input[type=submit]{
+.google-search input[type=submit]{
   visibility: hidden;
 }
