--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,44 +1,3 @@
-
-
-<style>
-  #new-note{
-    margin: 450px;
-    width: 45%;
-    padding: 0.1px;
-    margin-top: 15px;
-  }
-  #new-note ul li a{
-    text-decoration:none;
-    color:#000;
-    background:#FCFF4B;
-    display:block;
-    overflow:auto;
-    height:45em;
-    width:35em;
-    padding:1.3em;
-  }
-  #create input {
- background-color:#FFF;
- min-height:40px;
- width:515px;
- font-size:14pt;
- margin-bottom: 30px;
- padding: 40;
- border-radius: 10px;
- background:rgba(255,255,255,1.0);
- border:none;
-}
-#newnote {
- margin-top: 1px;
- background:rgba(255,255,255,1.0);
- border:none;
-}
-#new-note-submit {
- margin-top: 13px;
- width:100px;
-}
-</style>
-
 <br>
 <br>
 <div id="new-note">
@@ -57,6 +16,7 @@
               </form>
               <form action="/notes/<%= @note.id %>" method="post">
                   <input type="hidden" name="_method" value="DELETE">
+                  <%= token_tag %>
                   <input type="submit" value="DELETE">
                 </form>
               </div>
