--- a/app/assets/stylesheets/flashcards.scss
+++ b/app/assets/stylesheets/flashcards.scss
@@ -8,10 +8,9 @@
   width: 500px;
   height: 300px;
   border: 1px solid #f1f1f1;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
 }
 
-/* This container is needed to position the front and back side */
 .flip-card-inner {
   position: relative;
   width: 100%;
@@ -21,35 +20,25 @@
   transform-style: preserve-3d;
 }
 
-/* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
-/* Position the front and back side */
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
+  -webkit-backface-visibility: hidden; 
   backface-visibility: hidden;
 }
 
-/* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  // line-height: 400px;
-  // height: 400px;
-  // line-height: 1.5;
-  // display: inline-block;
-  // vertical-align: middle;
-
   padding: 10px;
   text-align: center;
   background-color: #1A535C;
   color: #F7FFF7;
 }
 
-/* Style the back side */
 .flip-card-back {
   padding: 10px;
   background-color: #1A535C;
@@ -57,9 +46,3 @@
   color: #F7FFF7;
   transform: rotateY(180deg);
 }
-
-
-// .flip-card .text-container {
-//   margin: 45px 10px;
-//   background-color: white;
-// }
