--- a/app/assets/stylesheets/thatlabs.scss
+++ b/app/assets/stylesheets/thatlabs.scss
@@ -1,8 +1,55 @@
-// Place all the styles related to the thatlabs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+  @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 .list-container {
   width: 90%;
   background-color: #D3D3D3;
+}
+ul li .result-container{
+width: 90%;
+margin: auto;
+padding: 5px, 20px;
+}
+.container {
+    padding: 10%;
+    text-align: center;
+}
+#custom-search-input {
+    margin:0;
+    margin-top: 10px;
+    padding: 0;
+}
+#custom-search-input .search-query {
+    width:100%;
+    padding-right: 3px;
+    padding-left: 15px;
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 0;
+}
+#custom-search-input button {
+    border: 0;
+    background: none;
+    padding: 2px 5px;
+    margin-top: 2px;
+    position: absolute;
+    right:0;
+    margin-bottom: 0;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    color: orange;
+    cursor: unset;
+    z-index: 2;
+}
+.search-query:focus {
+    z-index: 0;
+}
+.thatlab-container {
+  text-align: center;
+  width: 40%;
+  margin: auto;
+}
+.container a {
+  color: black;
 }
