--- a/app/views/thatlabs/find.html.erb
+++ b/app/views/thatlabs/find.html.erb
@@ -1,11 +1,3 @@
-<style>
-  .result-container{
-  width: 90%;
-  margin: auto;
-  padding: 5px, 20px;
-}
-</style>
-
 <nav class="navbar navbar-light bg-light">
   <a href="/thatlabs"class="navbar-brand">THAT LAB</a>
   <form class="form-inline" action="/thatlab" method= "get">
@@ -17,7 +9,7 @@
 <br>
 
 <% if @questions == nil %>
-  <% redirect_to error_path %>
+  <% redirect_to :error %>
   <% else %>
   <% @questions.each do |question| %>
     <br>
