Finished views for project and idea. Finished routing and connections.

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,10 @@
-<h1>Projects</h1>
-<h5>Pick a project to see diferent project ideas.</h5>
+<br> <br>
+<div class="project-main-container">
+  <h1>Welcome!</h1>
+  <h5>Pick a project to see diferent project ideas.</h5>
+  <br> <br>
+  <%= link_to "CLI project", project_path(5) %> |
+  <%= link_to "Sinatra project", project_path(4) %> |
+  <%= link_to "Rails project", project_path(3) %>
 
-<%= link_to, "CLI project", :project(5) %>
+</div>
