--- a/app/assets/stylesheets/ideas.scss
+++ b/app/assets/stylesheets/ideas.scss
@@ -1,8 +1,8 @@
 .form-container{
   width: 50%;
   margin: auto;
-  border: 10px;
-  border-color: black;
+  border-style: outset;
+  border-width: 8px;
   padding: 30px;
 }
 .form-container h2{
