--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the projects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.project-main-container{
+  padding: 20px;
+  width: 40%;
+  border-style: outset;
+  border-width: 8px;
+  margin:auto;
+}
+.idea-container{
+  border-style: inset;
+  border-width: 3px;
+}
